# LegendServer

./: .gitmodules  CMakeLists.txt  README.md
script/: init.lua  main.lua
script/app/: server.lua
script/ls/: functions.lua  init.lua  protocol.lua
src/: Buffer.cpp  GameServer.cpp  GameServer.h  main.cpp
src/core/: Constant.h  FileUtils.cpp  FileUtils.h  LegendServer.h  Path.cpp  Path.h  PlatformConfig.h  ProtocolDefine.h  Ref.cpp  Ref.h  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  log.cpp  log.h
src/core/cocos/: CCAutoreleasePool.cpp  CCAutoreleasePool.h  CCConsole.h  CCLuaBridge.cpp  CCLuaEngine.cpp  CCLuaEngine.h  CCLuaStack.cpp  CCLuaStack.h  CCLuaValue.cpp  CCLuaValue.h  CCRef.cpp  CCScriptSupport.cpp  CCScriptSupport.h  ccMacros.h
src/logic/: Buffer.h  GameClient.cpp  GameClient.h  GameProtocol.h  GameServer.cpp  GameServer.h
src/test/: TestClient.cpp  TestClient.h  main.cpp
